--- a/src/Experiments/Initialization_smtp_20win.ipynb
+++ b/src/Experiments/Initialization_smtp_20win.ipynb
@@ -151,7 +151,7 @@
     "        self.decode_without_input =  False\n",
     "        \n",
     "        self.log_path = \"C:/Users/Bin/Desktop/Thesis/models/smtp_2000init/log.txt\"\n",
-    "        self.training_set_size = 100*2000\n",
+    "        self.training_set_size = 20*2000\n",
     "        # import dataset\n",
     "        # The dataset is divided into 6 parts, namely training_normal, validation_1,\n",
     "        # validation_2, test_normal, validation_anomaly, test_anomaly.\n",
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -569,6 +569,18 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Got parameters mu and sigma.\n",
+      "46\n",
+      "Threshold:  0.0859472749233\n",
+      "Saving model to disk...\n",
+      "Model saved accompany with parameters and threshold in file: C:/Users/Bin/Desktop/Thesis/models/smtp_2000init/_1_45_20_para.ckpt\n",
+      "--- Initialization time: 1135.32399892807 seconds ---\n"
+     ]
     }
    ],
    "source": [
