--- a/Thesis/content/6_experiementresults.tex
+++ b/Thesis/content/6_experiementresults.tex
@@ -16,13 +16,13 @@ Dataset & AUC(without retraining) & AUC(with retraining) & \#retrain \\
 \hline 
 PowerDemand & 0.91 & 0.97 & 1  \\  
 \hline 
-SMTP &  &  &  \\ 
+SMTP & 0.68 & 0.69 & 7 \\ 
 \hline 
 SMTP+HTTP &  &  & \\ 
 \hline 
 HTTP &  &   &   \\ 
 \hline 
-ForestCover & &  & \\   
+ForestCover &0.61&0.73 & 5\\   
 \hline    
 \end{tabular}
 \label{tab:performance}  
