--- a/Thesis/content/2_relatedworks.tex
+++ b/Thesis/content/2_relatedworks.tex
@@ -53,7 +53,11 @@ Zhou et al. \cite{online} proposed an online incremental updating method for den
 
 Dong et al. \cite{threaded} proposed a 2-step anomaly detection mechanism with incremental autoencoders. The implemented the system with ensembled autoencoders in multithreads to leverage parallel computing when large volumes of data arrive. Besides their 2-step mechanism check anomaly in the first step and verify anomaly data with previous and subsequent data (to differ between anomalous state and concept drift) to reduce false-positive rate in anomaly detection. In the experimental results, they show that their model outperforms commonly used tree-based anomaly detection model especially when concept drift presents and speed up the online processing speed with mini-batch learning and online learning in multithreads.\\
 
-In this work, we implement a LSTMs-autoencoder based incremental streaming data anomaly detection model. The LSTMs-autoencoder is close to the model by Malhotra et al. \cite{encdecad}, and we design an online model updating strategy as well as the dataset used for model updating.
+Ghazikhani et al. \cite{onlinenn} introduced an online neural network model for streaming data towards to the two major problems of online learning, concept drift and imbalanced classes. In term of concept drift, they applied a forgetting function that weights recent instances to navigate the model to the drifted model, so that the model always learns pattern from latest data. Besides, for class imbalance, they proposed a error function for two-class imbalance problem with the basic idea that the error function generating higher error signals for instances in the minority class.\\
+
+Kochurov el at. \cite{bayesian} designed incremental learning framework for deep neural networks based on Bayesian inference. They argued that, naïve deep learning approaches for incremental learning applies Stochastic Gradient Descent (SGD), which intent to keep previous learned model remembered, and enhanced with current batch of new data. However, by SGD, the neural network model is likely to converge to the local optimal of the latest batch of data with of preserve the previous knowledge. Their Bayesian framework estimate the posterior distribution over the weights of the model in the condition of previous knowledge and use the Bayesian rule to sequentially update the posterior distribution in the incremental learning.\\
+
+In this work, we implement a LSTMs-autoencoder based incremental streaming data anomaly detection model. The LSTMs-autoencoder is close to the model by Malhotra et al. \cite{encdecad}, and we design an online model updating strategy as well as the dataset used for model updating. 
 
 
 
