--- a/Thesis/content/4_proposedmodel.tex
+++ b/Thesis/content/4_proposedmodel.tex
@@ -45,7 +45,7 @@ abnormalBuffer = [ ]\;
 
 
 
-\section{LSTMs-Autoencoder initialization}
+\section{LSTMs-Autoencoder}
 \label{sec:initialization}
 
 \subsection{Encoder-decoder architecture}
