--- a/Thesis/referenzen.bib
+++ b/Thesis/referenzen.bib
@@ -42,7 +42,7 @@
 
 @article{timenet,
 	author={Pankaj Malhotra and Vishnu TV and Lovekesh Vig and Puneet Agarwal and Gautam Shroff},
-	title = {TimeNet: Pre-trained deep recurrent neural network for time series classication},
+	title = {TimeNet: Pre-trained deep recurrent neural network for time series classification},
 	year = {2017}
 }
 
@@ -76,14 +76,28 @@
 	year = {2002}
 }
 
+
 @article{onlinelof,
 	author={Xiaohong Tang and Chen Li},
 	title = {The Stream Detection Based on Local Outlier Factor},
 	year = {2015}
 }
+@article{onlinenn,
+	author={Adel Ghazikhani and Reza Monsefi and Hadi Sadoghi Yadi},
+	title = {Online neural network model for non-stationary and imbalanced data stream classication},
+	year = {2013}
+}
 
+@article{bayesian,
+	author={Max Kochurov and Timur Garipov and Dmitry Podoprikhin and Dmitry Molchanov and Arsenii Ashukha and DmitryVetrov},
+	title = {BAYESIAN INCREMENTAL LEARNING FOR DEEP NEURAL NETWORKS}
 
+}
 
-
+@article{adam,
+	author={Diederik P. Kingma and Jimmy Lei Ba}
+	title={ADAM: A METHOD FOR STOCHASTIC OPTIMIZATION}
+	year={2017}
+}
 
 
