--- a/Thesis/content/6_experiementresults.tex
+++ b/Thesis/content/6_experiementresults.tex
@@ -84,7 +84,7 @@ Sometimes concept drift over the stream are slight, periodically, and potentiall
 
 The model is trained with hidden size 45 and window length 20. In the beginning, 3000 windows are used for initialization, and 26050 windows comes as stream.  Every normal window contains more than 10 scores over threshold is treated as hard window and appended to retraining buffer. Also, every abnormal window is saved for threshold updating.  When retrain buffer size reaches 750, a retraining process will be triggered. The model retraining is triggered 3 times over stream. 
 
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
 	\begin {subfigure}[t]{0.45\textwidth}
 	\centering
